# pax-backend

./: .dockerignore  .gitignore  .infisical.json  AGENTS.md  LICENSE  README.md  fly.control.toml  fly.driver.toml  fly.shards.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: README.md  deploy-control.yml  deploy-driver.yml  deploy-shards.yml  publish-sdk.yml  scenario-suite.yml  smoke.yml  typescript-strict.yml
artifacts/: smoke-local-20260528T004256Z.json  smoke-local-restructured-20260528T012427Z.json
docs/: api-kinds-catalog.md  bundle-compatibility.md  compute-budgets-catalog.md  contract-spec.md  contract.md  dev-loop.md  fly-topology.md  redeploy-runbook.md  sandboxing-current-pick.md  why-no-billing.md
docs-next/: README.md
docs-next/contract/: bundle-compatibility.md  compute-budgets.md  creator-runtime.md  external-api-channel.md  history-events.md  lifecycle-and-wake.md  storage.md
docs-next/operator-overlays/: billing-policy.md  moderation-policy.md  participation-and-roles.md  projection-sync.md  url-service-authoring.md
docs-next/proofs/: historia-default.md
examples/: README.md
orchestration/: README.md
orchestration/placement-router/: Cargo.toml  README.md
orchestration/placement-router/src/: main.rs
roadmap/: README.md
runtime/: README.md
scripts/: build-bundles.sh  build-engine.sh  build-router.sh  build-vendor-ts.sh  local-down.sh  local-up.sh  spawn-engine.mts  spin-up.sh  tear-down.sh
sdk/: README.md
shared/: README.md
testing/: README.md
tooling/: README.md
(+435 files in other folders)
